components/crud-web-apps/jupyter/manifests/overlays/istio/deployment-istio-side-car.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
