components/crud-web-apps/jupyter/manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jupyter-web-app-jupyter-web-app
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /jupyter
    match:
    - uri:
        prefix: /jupyter/
    rewrite:
      uri: /
    route:
    - destination:
        # host: service.namespace.svc.clusterDomain — index 1 and 3 filled by replacements
        host: jupyter-web-app-service.placeholder.svc.placeholder
        port:
          number: 80
