components/crud-web-apps/jupyter/manifests/overlays/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jupyter-web-app
spec:
  selector:
    matchLabels:
      app: jupyter-web-app
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
